[package]
name = "relique"
version = "0.1.0"
authors = ["macarrie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
walkdir = "2.3.1"
exitcode = "1.1.2"
log = "0.4.8"
simplelog = "0.8.0"
actix-web = { version = "3.0.0-alpha.3", features = ["openssl"] }
actix-rt = "1.1.1"
openssl = { version = "0.10", features = ["v110"] }
