[package]
name = "relique"
version = "0.1.0"
authors = ["macarrie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
toml = "0.5.6"
walkdir = "2.3.1"
exitcode = "1.1.2"
log = "0.4.8"
simplelog = "0.8.0"
actix-web = { version = "3.0.0-alpha.3", features = ["openssl"] }
actix-rt = "1.1.1"
openssl = { version = "0.10", features = ["v110"] }
chan = "0.1.23"
chan-signal = "0.3.3"
ticker = "0.1.1"
futures = "0.3.5"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.31"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.3.9"
