[package]
name = "relique"
version = "0.1.0"
authors = ["macarrie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-utils = "2.0.0"
actix-web = { version = "3", features = ["openssl"] }
anyhow = "1.0.31"
chan = "0.1.23"
chan-signal = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
exitcode = "1.1.2"
futures = "0.3.5"
lazy_static = "1.4.0"
librsync = "0.2.1"
log = "0.4.8"
openssl = { version = "0.10", features = ["v110"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
regex = "1.3.9"
rusqlite = { version = "0.24.0", features = ["uuid", "serde_json"] }
serde = { version = "1.0.114", features = ["derive", "rc"] }
serde_json = "1.0.56"
simplelog = "0.8.0"
ticker = "0.1.1"
toml = "0.5.6"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2.3.1"
